k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
    nodePort: 30080
